examples/test/testpolicy13985.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13985
  namespace: namespace67
spec:
  podSelector:
    matchLabels:
      key14: value34
      key46: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value3
          key18: value34
          key8: value0
      podSelector:
        matchLabels:
          key24: value1
